refactor: cors config